--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,10 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/tutoring
+    username: root
+    password: zaq1@WSX
+    driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: tutoring-management
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.yaml
