--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
-  - include:
-      file: classpath:/db/changelog/changes/001-initial-language-table.sql
+  - includeAll:
+      path: classpath:/db/changelog/changes/
