--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!--  Spring DevTools  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!--  Spring Test  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
